--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,30 +1,26 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* You can override the default Infima variables here. */
 :root {
+  --ifm-font-family-base: 'Inter';
   --ifm-color-primary: #103f84;
-  --ifm-color-primary-dark: #1963d0;
-  --ifm-color-primary-darker: #124a9d;
-  --ifm-color-primary-darkest: #0c316a;
-  --ifm-color-primary-light: #1865dc;
-  --ifm-color-primary-lighter: #1b65ff;
-  --ifm-color-primary-lightest: #1a55ff;
+  --ifm-color-primary-dark: #0e3977;
+  --ifm-color-primary-darker: #0e3670;
+  --ifm-color-primary-darkest: #0b2c5c;
+  --ifm-color-primary-light: #124591;
+  --ifm-color-primary-lighter: #124898;
+  --ifm-color-primary-lightest: #1552ac;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #406fb4;
-  --ifm-color-primary-dark: #1963d0;
-  --ifm-color-primary-darker: #124a9d;
-  --ifm-color-primary-darkest: #0c316a;
-  --ifm-color-primary-light: #1865dc;
-  --ifm-color-primary-lighter: #1b65ff;
-  --ifm-color-primary-lightest: #1a55ff;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #103f84;
+  --ifm-color-primary-dark: #0e3977;
+  --ifm-color-primary-darker: #0e3670;
+  --ifm-color-primary-darkest: #0b2c5c;
+  --ifm-color-primary-light: #124591;
+  --ifm-color-primary-lighter: #124898;
+  --ifm-color-primary-lightest: #1552ac;
 }
